add secret to players (#4)
* add secret to players

* use number

* display secret

* fix order generation

* remove usage of `recreate_cards`

* allow user to change order of players

* add player position in the API

* fix i18n title

* improve test

* update card only if secret

* fix translation

* wip

* improve email
