# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.0].define(version: 2023_01_28_213431) do
+ActiveRecord::Schema[7.0].define(version: 2023_02_05_203537) do
   create_table "cards", force: :cascade do |t|
     t.integer "game_id", null: false
     t.string "action"
@@ -44,7 +44,8 @@ ActiveRecord::Schema[7.0].define(version: 2023_01_28_213431) do
     t.integer "user_id"
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
-    t.integer "order", default: 0
+    t.integer "position"
+    t.integer "secret"
     t.index ["game_id"], name: "index_players_on_game_id"
     t.index ["user_id"], name: "index_players_on_user_id"
   end
